--- a/index.html
+++ b/index.html
@@ -308,17 +308,17 @@
         let add_note = document.getElementById("add_note").value
 
         if (!fom){
-            text = "zena, "
+            text = "0, " //zena
         }else{
-            text = "muz, "
+            text = "1, " //muz
         }
 
         text = text + age + ", "
         
         if (kdk){
-            text = text + "vedel/a, "
+            text = text + "1, "
         }else{
-            text = text + "nevedel/a, "
+            text = text + "0, "
         }
 
         text = text + add_note
