--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         padding: 20px;
         margin: 20px auto;
         max-width: 800px;
+        width: 80%;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         .text-box {
