--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             font-family: 'Montserrat', sans-serif;
             padding-left: 40px;
             padding-right: 40px;
+            font-size: 120%;
         }
         #dg {
             margin: auto;
